The initial data table

--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -17,7 +17,7 @@
 
 
     .button {
-        display: inline-block;
+        display: flex;
         box-sizing: border-box;
         border: 1px solid;
         border-radius: var(--corner-radius);
@@ -26,6 +26,7 @@
         min-width: 0;
         vertical-align: middle;
         overflow: hidden;
+        align-items: center;
 
         label {
             cursor: pointer;
