--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -39,6 +39,21 @@
         .display-type(4px);
     }
 
+    &.isDisabled,
+    &.isDisabled:active,
+    &.isDisabled:hover,
+    &.isDisabled:hover:not(:active),
+    &.isDisabled:hover:not(:active):not(.isActive) {
+        cursor: not-allowed;
+
+        .iconContainer {
+            color: var(--color-black-alt3);
+            background: none;
+            border-color: transparent;
+            box-shadow: initial;
+        }
+    }
+
     &:hover {
         .iconContainer {
             background-color: var(--color-primary-alt4);
@@ -82,7 +97,8 @@
             box-shadow: 0 0 0 2px var(--color-primary-alt4);
             color: var(--color-primary) !important;
         }
-        &.isToggler{
+        
+        &.isToggler {
             .iconContainer {
                 margin: auto;
                 width: calc(var(--grid-unit) * 4px);
