Tinting of selection controls

--- a/src/components/general/SelectionControls/inputStyles.less
+++ b/src/components/general/SelectionControls/inputStyles.less
@@ -20,6 +20,7 @@
     }
 
     input + label {
+        position: relative;
         color: var(--color-white);
         cursor: pointer;
         display: flex;
