--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -26,7 +26,8 @@
         }
 
         &.focus {
-            border-bottom: 2px solid var(--color-primary);
+            border-bottom: 1px solid var(--color-primary);
+            box-shadow: 0 1px 0 var(--color-primary);
             padding-bottom: calc(.grid-unit(1px)[] - 1px);
         }
         
