Styles compact for checkbox

--- a/src/components/general/SelectionControls/Checkbox/styles.less
+++ b/src/components/general/SelectionControls/Checkbox/styles.less
@@ -6,6 +6,10 @@
 .checkboxContainer {
     .inputStyles(checkmark, var(--color-primary), var(--color-primary), var(--color-black-alt4));
 
+    &.compact {
+
+    }
+
     input + label {
         &::before{
             border: 1px solid var(--color-primary);
