Added compact to all selection controls

--- a/src/components/general/SelectionControls/Checkbox/styles.less
+++ b/src/components/general/SelectionControls/Checkbox/styles.less
@@ -7,10 +7,17 @@
     .inputStyles(checkmark, var(--color-primary), var(--color-primary), var(--color-black-alt4));
 
     &.compact {
-
+        input + label {
+            &::before{
+                width: .grid-unit(1.8px)[];
+                height: .grid-unit(1.8px)[];
+           
+            }
+        }
     }
 
     input + label {
+        position: relative;
         &::before{
             border: 1px solid var(--color-primary);
             width: .grid-unit(2px)[];
