--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -5,7 +5,7 @@
     flex-direction: column;
     
     .inputContent {
-        display:  flex;
+        display: flex;
         justify-content: space-between;
         min-height: .grid-unit(5px)[];
         max-height: .grid-unit(7px)[];
@@ -28,20 +28,23 @@
         &.focus {
             border-bottom: 1px solid var(--color-primary);
             box-shadow: 0 1px 0 var(--color-primary);
-            padding-bottom: calc(.grid-unit(1px)[] - 1px);
         }
         
         &.error {
             border-bottom-color: var(--color-red);
             caret-color: var(--color-red);
+            
+            &.focus {
+                box-shadow: 0 1px 0 var(--color-red);
+            }
         }
         
-        &.labelLess{
+        &.labelLess {
             padding-top: 0;
             padding-bottom: 0;
         }
 
-        .inputTextContent{
+        .inputTextContent {
             display: flex;
             flex-direction: column;
             width: 100%;
@@ -74,7 +77,7 @@
                 }
             }
 
-            &.moveLabel{
+            &.moveLabel {
                 label {
                     font-size: 12px;
                     line-height: 14px;
@@ -82,6 +85,7 @@
                     opacity: 1;
                     position: relative;
                 }
+
                 &.error{
                     label{
                         color: var(--color-red);
@@ -89,13 +93,14 @@
                 }
             }
 
-            &.disabled{
+            &.disabled {
                 label {
                     color: var(--color-primary-accent);
                     opacity: 0.6;
                     cursor: not-allowed;
                 }
-                input{
+
+                input {
                     cursor: not-allowed;
                 }
             }
@@ -110,7 +115,8 @@
             }
         }
     }
-    .helperText{
+
+    .helperText {
         padding: 0 .grid-unit(2px)[];
         font-size: 11px;
         line-height: .grid-unit(2px)[];
