Use scrollWidth > offsetWidth to determine if table has narrower parent

--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -5,6 +5,8 @@
     transition: width .1s;
     overflow: auto;
     color: var(--color-primary-accent);
+    width: var(--filter-pane-width);
+    flex-shrink: 0;
 
     .collapseExpandButton {
         display: flex;
