--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -1,94 +1,72 @@
 @import '~styles/mixins.less';
-@import '~styles/variables.less';
-@import '~styles/colors.less';
 
-.container {
-    top: 0; bottom: 0;
-    left: 0; right: 0;
+.modalSideSheet {
     position: fixed;
-    opacity: 0;
-    transition: opacity .2s ease;
-    background-color: rgba(0, 0, 0, .32);
+    top: 0; bottom: 0;
+    right: 0;
+    width: .grid-unit(80px)[];
+    transform: translateX(calc(var(--grid-unit)* 80px));
+    background: var(--color-white);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    pointer-events: all;
+    transition: transform .2s ease;
 
-    .modalSideSheet {
-        position: fixed;
-        top: 0; bottom: 0;
-        right: 0;
-        width: .grid-unit(80px)[];
-        transform: translateX(640px);
+
+    @media (max-width: var(--mobile-max-width)) {
+        width: 100%;
+        left: 0;
+        transition: transform .1s ease-out;
+    }
+
+    .content {
+        height: 100%;
+        width: 100%;
+        max-height: 100%;
+        overflow: auto;
+        flex-grow: 1;
+    }
+
+    .header {
+        padding: .grid-unit(1px)[] .grid-unit(3px)[];
         background: var(--color-white);
-        overflow: hidden;
         display: flex;
-        flex-direction: column;
-        pointer-events: all;
-        transition: transform .2s ease;
 
-    
-        @media (max-width: @mobile-max-width) {
-            width: 100%;
-            left: 0;
-            transition: transform .1s ease-out;
+        .closeButton {
+            margin: 0;
         }
-    
-        .scrollContainer {
-            width: 100%;
-            max-height: 100%;
-            overflow: auto;
-            flex-grow: 1;
-    
-            .content {
-                height: auto;
-            }
-        }
-    
-        .content {
-            height: 100%;
-        }
-    
-        .header {
-            padding: .grid-unit(1px)[] .grid-unit(3px)[];
-            background: var(--color-white);
+        .headerContent {
             display: flex;
+            justify-content: space-between;
+            width: 100%;
 
-            .closeButton {
-                margin: 0;
+            .headerTitle{
+                font-size: var(--header-font-size);
+                line-height: var(--header-line-height);
+                padding-left: .grid-unit(1px)[];
+                flex: 1;
             }
-            .headerContent {
+
+            .headerIcons{
+                align-self: flex-end;
                 display: flex;
-                justify-content: space-between;
-                width: 100%;
-
-                .headerTitle{
-                    font-size: var(--header-font-size);
-                    line-height: var(--header-line-height);
-                    padding-left: .grid-unit(1px)[];
-                    flex: 1;
-                }
-    
-                .headerIcons{
-                    align-self: flex-end;
-                    display: flex;
-                    flex: 0;
-                }
+                flex: 0;
             }
-        }
-
-        &.comfortable {
-            --header-font-size: calc(var(--grid-unit) * 3px);
-            --header-line-height: calc(var(--grid-unit) * 6px);
-        }
-        &.compact {
-            --header-font-size: calc(var(--grid-unit) * 2px);
-            --header-line-height: calc(var(--grid-unit) * 4px);
         }
     }
     
     &.show {
-        opacity: 1;
-        pointer-events: all;
-        .modalSideSheet{
-            transform: translateX(0);
-        }
+        transform: translateX(0);
+    }
+    &.comfortable {
+        --header-font-size: calc(var(--grid-unit) * 3px);
+        --header-line-height: calc(var(--grid-unit) * 6px);
+    }
+    &.compact {
+        --header-font-size: calc(var(--grid-unit) * 2px);
+        --header-line-height: calc(var(--grid-unit) * 4px);
     }
 }
+
     
