--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -1,4 +1,5 @@
 @import '~styles/mixins.less';
+@import '~styles/variables.less';
 
 .modalSideSheet {
     position: fixed;
@@ -14,7 +15,7 @@
     transition: transform .2s ease;
 
 
-    @media (max-width: var(--mobile-max-width)) {
+    @media (max-width: @mobile-max-width) {
         width: 100%;
         left: 0;
         transition: transform .1s ease-out;
@@ -40,18 +41,17 @@
             display: flex;
             justify-content: space-between;
             width: 100%;
+            flex-wrap: wrap;
 
             .headerTitle{
                 font-size: var(--header-font-size);
                 line-height: var(--header-line-height);
                 padding-left: .grid-unit(1px)[];
-                flex: 1;
             }
 
             .headerIcons{
-                align-self: flex-end;
+                margin-left: auto;
                 display: flex;
-                flex: 0;
             }
         }
     }
@@ -64,7 +64,7 @@
         --header-line-height: calc(var(--grid-unit) * 6px);
     }
     &.compact {
-        --header-font-size: calc(var(--grid-unit) * 2px);
+        --header-font-size: calc(var(--grid-unit) * 2.5px);
         --header-line-height: calc(var(--grid-unit) * 4px);
     }
 }
