Basic standalone calendar

--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -7,6 +7,10 @@
     height: 100%;
     color: var(--color-primary-accent);
 
+    * {
+        font-family: Equinor, sans-serif;
+    }
+
     a {
         color: var(--color-primary);
     }
