--- a/src/components/general/Slider/styles.less
+++ b/src/components/general/Slider/styles.less
@@ -86,4 +86,10 @@
             cursor: pointer;
         }
     }
+
+    &.mouseIsDown {
+        .slider, .handle {
+            transition: none;
+        }
+    }
 }
