--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -8,7 +8,7 @@
     --color-primary-alt4: #DEEDEE;
     --color-primary-accent: #243746;
     --color-primary-hover: #004E55;
-    --color-primary-hover-alt1: #F2F8F8;
+    --color-primary-hover-alt1: rgba(0, 112, 121, 0.13);
 
     // Secondary color and alternatives
     --color-secondary: #FF1243;// Energy Red
