Custom components for item and aside

--- a/src/components/general/Menu/styles.less
+++ b/src/components/general/Menu/styles.less
@@ -35,7 +35,7 @@
 
             > span {
                 height: calc(var(--grid-unit) * 5.5px);
-                padding: 0 calc(var(--grid-unit) * 4px);
+                padding: 0 calc(var(--grid-unit) * 3px);
                 display: flex;
                 align-items: center;
                 font-size: 12px;
@@ -43,6 +43,10 @@
                 width: calc(100% - (var(--grid-unit) / 2) * 1px);
                 border: 1px dashed transparent;
                 text-align: left;
+
+                aside {
+                    margin-right: calc(var(--grid-unit) * 2px);
+                }
 
                 span {
                     flex-grow: 2;
