--- a/src/components/general/PersonPhoto/styles.less
+++ b/src/components/general/PersonPhoto/styles.less
@@ -1,3 +1,123 @@
-.container {
+
+.photoContainer {
     display: flex;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+
+    &.xlarge {
+        &.comfortable {
+            // 56x56
+            width: calc(var(--grid-unit) * 7px);
+            height: calc(var(--grid-unit) * 7px);
+        }
+
+        &.compact {
+            // 48x48
+            width: calc(var(--grid-unit) * 6px);
+            height: calc(var(--grid-unit) * 6px);
+        }
+    }
+
+    &.large {
+        &.comfortable {
+            // 40x40
+            width: calc(var(--grid-unit) * 5px);
+            height: calc(var(--grid-unit) * 5px);
+        }
+
+        &.compact {
+            // 32x32
+            width: calc(var(--grid-unit) * 4px);
+            height: calc(var(--grid-unit) * 4px);
+        }
+    }
+
+    &.medium {
+        &.comfortable {
+            // 32x32
+            width: calc(var(--grid-unit) * 4px);
+            height: calc(var(--grid-unit) * 4px);
+        }
+
+        &.compact {
+            // 24x24
+            width: calc(var(--grid-unit) * 3px);
+            height: calc(var(--grid-unit) * 3px);
+        }
+    }
+
+    &.small {
+        &.comfortable {
+            // 24x24
+            width: calc(var(--grid-unit) * 3px);
+            height: calc(var(--grid-unit) * 3px);
+        }
+
+        &.compact {
+            // 16x16
+            width: calc(var(--grid-unit) * 2px);
+            height: calc(var(--grid-unit) * 2px);
+        }
+    }
+
+    .affiliationContainer {
+        border-radius: 50%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+
+        &.affiliate {
+            background: var(--color-secondary-alt2);
+        }
+    
+        &.consultant, &.externalHire {
+            background: var(--color-red);
+        }
+    
+        &.xlarge {
+            &.comfortable {
+                // 24x24
+                width: calc(var(--grid-unit) * 3px);
+                height: calc(var(--grid-unit) * 3px);
+            }
+    
+            &.compact {
+                // 16x16
+                width: calc(var(--grid-unit) * 2px);
+                height: calc(var(--grid-unit) * 2px);
+            }
+        }
+    
+        &.large, &.medium {
+            &.comfortable {
+                // 16x16
+                width: calc(var(--grid-unit) * 2px);
+                height: calc(var(--grid-unit) * 2px);
+            }
+    
+            &.compact {
+                // 8x8
+                width: calc(var(--grid-unit) * 1px);
+                height: calc(var(--grid-unit) * 1px);
+            }
+        }
+    
+        &.small {
+            &.comfortable {
+                // 12x12
+                width: calc(var(--grid-unit) * 1.5px);
+                height: calc(var(--grid-unit) * 1.5px);
+            }
+    
+            &.compact {
+                // 8x8
+                width: calc(var(--grid-unit) * 1px);
+                height: calc(var(--grid-unit) * 1px);
+            }
+        }
+    
+    }
 }
