--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -1,17 +1,50 @@
-.container {
-    width: var(--container-width);
-    // height: var(--container-height);
-    padding: var(--container-padding);
-    box-sizing: border-box;
-    display: flex;
-    cursor: pointer;
-    background-color: var(--color-white);
+.context {
+    &.container {
+        width: var(--container-width);
+        padding: var(--container-padding);
+        box-sizing: border-box;
+        display: flex;
+        background-color: var(--color-white);
+        border: 1px solid var(--color-black-alt4);
+        border-radius: 4px;
+        position: relative;
+        transition: box-shadow .15s;
 
-    &:hover {
-        background-color: var(--color-black-alt5);
+        &.isClickable {
+            cursor: pointer;
+
+            &:hover, &.isSelected {
+                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+            }
+
+            &.isSelected {
+                background-color: var(--color-primary-alt4);
+                border-color: var(--color-primary-alt4);
+            }
+        }
+
+        &.multipleAssignments {
+            &::before {
+                content: "";
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: -2px;
+                background-color: var(--color-primary-alt4);
+                z-index: -1;
+                border-radius: 4px;
+                border-color: white;
+            }
+
+            .photoContainer {
+                cursor: pointer;
+            }
+        }
     }
 
     .photoContainer {
+        user-select: none;
         flex-shrink: 0;
 
         .personIconContainer {
@@ -49,6 +82,12 @@
         flex-grow: 1;
         margin-left: var(--photo-and-details-spacing);
 
+        .assignedPersonName, .basePositionName, .positionName {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
         .basePositionName {
             font-size: 11px;
             line-height: 16px;
@@ -85,8 +124,35 @@
         }
     }
 
-    &.isSelected {
-        background-color: var(--color-primary-alt4);
+    &.instancesPopover {
+        pointer-events: all;
+        position: absolute;
+        left: calc(100% + (var(--grid-unit) * 2px));
+        background: white;
+        border: 1px solid var(--color-black-alt4);
+        border-radius: 4px;
+        overflow: visible;;
+    
+        .instanceWrapper {
+            width: var(--container-width);
+            border-bottom: 1px solid var(--color-black-alt4);
+            padding: var(--container-padding);
+            box-sizing: border-box;
+            transition: box-shadow .15s;
+
+            &:hover {
+                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+            }
+
+            &:first-child {
+                border-radius: 4px 4px 0 0;
+            }
+
+            &:last-child {
+                border: none;
+                border-radius: 0 0 4px 4px;
+            }
+        }
     }
 
     &.comfortable {
