Use assigned person

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -134,6 +134,7 @@
         overflow: visible;;
     
         .instanceWrapper {
+            display: flex;
             width: var(--container-width);
             border-bottom: 1px solid var(--color-black-alt4);
             padding: var(--container-padding);
