--- a/src/components/org/OrgChart/components/styles.less
+++ b/src/components/org/OrgChart/components/styles.less
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction:row-reverse;
     letter-spacing:1.5px;
-    font-size:14px;
+    font-size:12px;
 }
 .link{
     stroke: #b9b9b8;
@@ -11,6 +11,6 @@
     fill: none;
     shape-rendering: crispEdges;
 }
-.card, .labelRect{
+.card, .labelRect, .breadCrumbRect{
     fill: none;
 }
