Further improvements to person photo component

--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -4,12 +4,10 @@
     position: relative;
     width: var(--photo-size);
     height: var(--photo-size);
-
-    > img {
-        border-radius: 50%;
-        width: var(--photo-size);
-        height: var(--photo-size);
-    }
+    border-radius: 50%;	
+    background-size: cover;	
+    background-position: center;	
+    background-repeat: no-repeat;
 
     &.xlarge {
         &.comfortable {
