--- a/src/components/org/OrgChart/components/styles.less
+++ b/src/components/org/OrgChart/components/styles.less
@@ -4,6 +4,10 @@
     flex-direction:row-reverse;
     letter-spacing:1.5px;
     font-size:12px;
+
+    &.oneCardRow{
+        flex-direction: row;
+    }
 }
 .link{
     stroke: #b9b9b8;
