People picker getting close to version 1

--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -16,6 +16,10 @@
         padding: .grid-unit(1px)[] .grid-unit(2px)[];
         border-radius: 4px 4px 0 0;
         
+        > aside {
+            padding-right: .grid-unit(2px)[];
+        }
+
         &:hover {
             cursor: text;
         }
