--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -18,6 +18,8 @@
         
         > aside {
             padding-right: .grid-unit(2px)[];
+            display: flex;
+            align-items: center;
         }
 
         &:hover {
