some visual adjustments to the fusion components

--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -35,8 +35,10 @@
 
     &:focus {
         .button {
-            outline: 1px dashed var(--color-black-alt3);
+            outline: 2px dashed var(--color-primary);
+            outline-offset: 1px;
         }
+        
     }
     
     &:active {
