--- a/src/components/general/ErrorMessage/styles.less
+++ b/src/components/general/ErrorMessage/styles.less
@@ -28,6 +28,7 @@
                 padding-top: calc(var(--grid-unit) * 6px);
                 font-size: 28px;
                 height: calc(var(--grid-unit) * 4px);
+                overflow: hidden;
             }
 
             .message {
