--- a/src/components/general/IconButton/styles.less
+++ b/src/components/general/IconButton/styles.less
@@ -67,7 +67,7 @@
             }
             &:not(.isActive){
                 .iconContainer {
-                    background-color: var(--color-black-alt5);
+                    background-color: var(--color-primary-hover-alt1);
                 }
             }
         }
