--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -128,6 +128,8 @@
     height: 100%;
     box-sizing: border-box;
     align-items: center;
+    margin-left: .grid-unit(1px)[];
+    margin-right: .grid-unit(1px)[];
 }
 
 /* Override the icon button colors */
