--- a/src/components/general/SelectionControls/styles.less
+++ b/src/components/general/SelectionControls/styles.less
@@ -194,7 +194,7 @@
         --container-height: calc(var(--grid-unit) * 6px);
 
         &.switch {
-            --switch-bar-width: calc(var(--grid-unit) * 5px);
+            --switch-bar-width: calc((var(--grid-unit) * 5px) - 6px);
             --switch-bar-height: calc(var(--grid-unit) * 1px);
             --switch-activator-size: calc(var(--grid-unit) * 2px);
             --switch-activator-margin: 0px;
