--- a/src/components/general/NavigationDrawer/components/styles.less
+++ b/src/components/general/NavigationDrawer/components/styles.less
@@ -140,3 +140,16 @@
         }
     }
 }
+
+.popover {
+    position: absolute;
+    left: 100%;
+    min-width: 100%;
+    margin-left: .grid-unit(1px)[];
+    pointer-events: all;
+    background: white;
+    border-radius: 4px;
+    border:  1px solid var(--color-black-alt4);
+    width: calc(var(--grid-unit)* 40px + 1px);
+    padding-bottom: .grid-unit(.5px)[];
+}
