--- a/src/components/general/NavigationDrawer/components/styles.less
+++ b/src/components/general/NavigationDrawer/components/styles.less
@@ -39,7 +39,7 @@
     
     }
     .toggleOpenContainer{
-        width: .grid-unit(6px)[];
+        min-width: .grid-unit(6px)[];
         height: 100%;
         display: flex;
         justify-content: center;
@@ -102,9 +102,9 @@
 
     &.menuSection{
         .linkContainer{
-            width: .grid-unit(27px)[];
             letter-spacing: 0.8px;
             font-weight: 500;
+            padding-left: .grid-unit(7px)[];
         }
 
     }
