Custom rendering for position picker and on select

--- a/src/components/org/PositionPicker/styles.less
+++ b/src/components/org/PositionPicker/styles.less
@@ -1,8 +1,12 @@
 .cardContainer {
-/*     width: var(--container-width);
-    padding: var(--container-padding);   
-    margin:-25px;
-    display: inline-block;
-    margin-top: 8px;
-    position: relative; */
+    display: flex;
+
+    .positionDetails {
+        margin-left: calc(var(--grid-unit) * 1px);
+
+        .positionName, .personName {
+            font-size: 14px;
+            line-height: 24px;
+        }
+    }
 }
